--- a/resources/language/Korean/strings.xml
+++ b/resources/language/Korean/strings.xml
@@ -4,5 +4,6 @@
     <string id="30002">최대 로딩 파일</string>
     <string id="30003">파일 이름 대신 제목 사용</string>
     <string id="30004">User-Agent</string>        
-    <string id="30005">영타를 한글로 변환 사용</string>            
+    <string id="30005">영타를 한글로 변환 사용</string>
+    <string id="30006">시즌 에피소프 구분 사용</string>    
 </strings>
